style.css
* {
  padding: 0;
  margin: 0;
  box-sizing: border-box;
  font-family: "Fira Sans", serif;
  color: #2e2e2e;
  line-height: 150%;
}
.page-width {
  max-width: 1280px;
  width: 100%;
  margin: 0 auto;
  padding: 15px 50px 50px;
}
@media screen and (max-width: 768px) {
  .page-width {
    padding: 15px;
  }
}
h1, h2 {
  margin: 20px 0;
  text-transform: uppercase;
}
h3 {
  margin: 10px 0;
}
ul {
  padding-left: 20px;
}
a {
  text-decoration: none;
  position: relative;
}
a:after {
  content: "";
  position: absolute;
  display: block;
  bottom: 1px;
  left: 0;
  width: 100%;
  height: 2px;
  background-color: #2e2e2e;
}

hr {
  margin: 30px 0;
  opacity: .4;
}
.flex-2 {
  display: flex;
}
.flex-3 {
  margin-bottom: 10px;
}
@media screen and (min-width: 501px) {
  .flex-3 {
    display: flex;
    justify-content: space-between;
  }
}
.exp-details {
  margin-bottom: 30px;
}
h3 {
  font-size: 20px;
}
#download-pdf {
  background-color: transparent;
  border: 2px solid #000;
  padding: 10px 25px;
  font-weight: bold;
  cursor: pointer;
  transition: .4s;
}
#download-pdf:hover {
  box-shadow: 3px 3px #000;
}
@media screen and (max-width: 500px) {
  #download-pdf {
    width: 100%;
  }
}
.skills .first li {
  margin-bottom: 15px;
}

